LA-129: (Client) Trial Balance: Right align currency values and ensure double underline is full width of the relevant text.

--- a/client/src/components/TrialBalance.css
+++ b/client/src/components/TrialBalance.css
@@ -1,5 +1,9 @@
-.doubleUnderline {
+.trialBalance .doubleUnderline {
     padding-bottom: 1px;
     border-bottom: double 5px;
-    width: 50px;
+}
+
+.trialBalance .debitCol,
+.trialBalance .creditCol {
+    min-width: 10rem;
 }
